# jzx

./: .env copy  .gitignore  README.MD  pyproject.toml
docker/postgres/: docker-compose.yml
docs/: install.md
docs/web/: README.MD
jzx/: __main__.py
jzx/framework/backend/: __init__.py
jzx/framework/backend/models/: __init__.py
jzx/framework/core/: __init__.py
jzx/framework/discord/: __init__.py
jzx/framework/internal/: __init__.py
jzx/framework/internal/cache/: __init__.py
jzx/framework/internal/db/: __init__.py
jzx/framework/internal/ux/: __init__.py
jzx/framework/internal/ux/views/: __init__.py
jzx/framework/tools/: __init__.py
jzx/framework/tools/rust/: __init__.py
jzx/framework/tools/utils/: __init__.py
