[project]
name = "jzx"
version = "0.1.0"
description = "The Last Discord Bot You Need"
readme = "README.MD"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.2.0",
    "aioimaplib>=2.0.1",
    "anyio>=4.9.0",
    "asyncpg>=0.30.0",
    "cashews>=7.4.0",
    "colorthief>=0.2.1",
    "discord-py[speed]",
    "gtts>=2.5.4",
    "jeyyapi",
    "jishaku>=2.6.0",
    "markdownify>=1.1.0",
    "openai>=1.77.0",
    "orjson>=3.10.18",
    "psutil>=7.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
    "ruff>=0.11.8",
    "wand>=0.6.13",
    "xxhash>=3.5.0",
    "yt-dlp>=2025.4.30",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/xcortservice/dpycompv2" }
jeyyapi = { git = "https://github.com/JeyyGit/jeyyapi.git" }
